# hello-android-zmq

./: .gitmodules  CMakeLists.txt  FindAndroidSDK.cmake  FindAnt.cmake  FindZeroMQ.cmake  README.md  cppzmq-config.cmake.in
android/: AndroidManifest.xml.in  CMakeLists.txt
android/server/: CMakeLists.txt  activity.cpp  launcher.cpp  server.cpp  util.hpp
client/: CMakeLists.txt  client.cpp
